--- a/src/Home.html
+++ b/src/Home.html
@@ -11,7 +11,7 @@
   </head>
 
   <body id="Body">
-    <div id="Rain">
+    <div id="rain"></div>
       <div id="top">
         <div id="header">
           <div id="head_menu">
@@ -80,7 +80,6 @@
         />
         <img src="\Images/Main.png" id="home_main" alt="Home Main" />
       </div>
-    </div>
     <div id="greeting">
       <div id="welcome">
         <p id="welcome_p">Welcome to my Website portfolio.</p>
