--- a/src/animation.html
+++ b/src/animation.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="animation_dom.js"></script>
     <title>Animation</title>
 </head>
-<body>
-    
+<body id="Body">
+    <div id="rain"></div>
 </body>
 </html>
