converted dom to jquery

--- a/src/Home.html
+++ b/src/Home.html
@@ -83,6 +83,8 @@
     <div id="greeting">
       <div id="welcome">
         <p id="welcome_p">Welcome to my Website portfolio.</p>
+        <img src="\Images/Signature_black.png" id="Signature_black" alt="Signature">
+        <img src="\Images/Signature_black.png" id="Signature_black2" alt="Signature">
         <div id="welcome_text">
           <p>Hello, I am Heh Nice.</p>
           <p>
@@ -90,10 +92,12 @@
             rigging, and currently making my own game!
           </p>
         </div>
+        
         <p id="welcome_fullfilment">
           This website is a college project in fulfillment of CS 313
         </p>
       </div>
+      
     </div>
     <div id="footer">
       <ul id="footerlist">
