--- a/src/animation.html
+++ b/src/animation.html
@@ -1,13 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <script src="animation_dom.js"></script>
     <title>Animation</title>
-</head>
-<body id="Body">
+  </head>
+  <body id="Body">
     <div id="rain"></div>
-</body>
+    <div id="top">
+      <div id="header">
+        <div id="head_menu">
+          <ul id="headerlist">
+            <li>
+              <p id="header_p1"><a href="Home.html" id="hrefHome">Home</a></p>
+            </li>
+            <li id="border1">
+              <p id="header_p2">
+                <a href="illustration.html" id="hrefillust">Illustration</a>
+              </p>
+            </li>
+            <li id="border2">
+              <p id="header_p3">
+                <a href="animation.html" id="hrefanim">Animation</a>
+              </p>
+            </li>
+            <li id="border3">
+              <p id="header_p4">
+                <a href="contact.html" id="hrefcont">Contact</a>
+              </p>
+            </li>
+          </ul>
+          <div id="sns">
+            <ul id="snsList">
+              <li>
+                <a href="https://twitter.com/HehNiceArt" target="new">
+                  <img src="\Images/twitter.png" id="snsImage" alt="Twitter" />
+                </a>
+              </li>
+              <li>
+                <a href="https://www.artstation.com/hehniceart" target="new">
+                  <img
+                    src="\Images/artstation.png"
+                    id="snsImage1"
+                    alt="artstation"
+                  />
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/@HehNiceArt/featured"
+                  target="new"
+                >
+                  <img src="\Images/youtube.png" id="snsImage2" alt="youtube" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="home">
+        <img
+        src="\Images/Main_animation_thumbnail_light.png"
+        id="home_thumb"
+        alt="Main Animation Thumbnail Light"
+        class="home_thumbnail"
+        >
+    </div>
+    <div id="contentContainer">
+
+    </div>
+  </body>
 </html>
