--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <script src="home_dom.js"></script>
+    <script src="src/home_dom.js"></script>
 
     <script></script>
     <title>Home</title>
@@ -25,7 +25,7 @@
                 <li>
                   <a href="https://twitter.com/HehNiceArt" target="new">
                     <img
-                      src="\Images/twitter.png"
+                      src="Images/twitter.png"
                       id="snsImage"
                       alt="Twitter"
                     />
@@ -34,7 +34,7 @@
                 <li>
                   <a href="https://www.artstation.com/hehniceart" target="new">
                     <img
-                      src="\Images/artstation.png"
+                      src="Images/artstation.png"
                       id="snsImage1"
                       alt="artstation"
                     />
@@ -46,7 +46,7 @@
                     target="new"
                   >
                     <img
-                      src="\Images/youtube.png"
+                      src="Images/youtube.png"
                       id="snsImage2"
                       alt="youtube"
                     />
@@ -59,36 +59,36 @@
       </div>
       <div id="home">
         <img
-          src="\Images/Main_animation_light.png"
+          src="Images/Main_animation_light.png"
           id="home_anim"
           alt="Home Animation"
           class="home_animation"
         />
         <img
-          src="\Images/Main_illust_light.png"
+          src="Images/Main_illust_light.png"
           id="home_illust"
           alt="Home Illustration"
           class="home_illustration"
         />
         <img
-          src="\Images/Main_contact_light.png"
+          src="Images/Main_contact_light.png"
           id="home_cont"
           alt="Home Contact"
           class="home_contact"
         />
         <img
-          src="\Images/Main_light.png"
+          src="Images/Main_light.png"
           id="home_home"
           alt="Home Home"
           class="home_home_light"
         />
-        <img src="\Images/Main.png" id="home_main" alt="Home Main" />
+        <img src="Images/Main.png" id="home_main" alt="Home Main" />
       </div>
     <div id="greeting">
       <div id="welcome">
         <p id="welcome_p">Welcome to my Website portfolio.</p>
-        <img src="\Images/Signature_black.png" id="Signature_black" alt="Signature">
-        <img src="\Images/Signature_black.png" id="Signature_black2" alt="Signature">
+        <img src="Images/Signature_black.png" id="Signature_black" alt="Signature">
+        <img src="Images/Signature_black.png" id="Signature_black2" alt="Signature">
         <div id="welcome_text">
           <p>Hello, I am Heh Nice.</p>
           <p>
@@ -106,20 +106,20 @@
     <div id="footer">
       <ul id="footerlist">
         <li>
-          <p id="footer_p1"><a href="Home.html" id="hrefHome">Home</a></p>
+          <p id="footer_p1"><a href="index.html" id="hrefHome">Home</a></p>
         </li>
         <li id="border1">
           <p id="footer_p2">
-            <a href="illustration.html" id="hrefillust">Illustration</a>
+            <a href="./src/illustration.html" id="hrefillust">Illustration</a>
           </p>
         </li>
         <li id="border2">
           <p id="footer_p3">
-            <a href="animation.html" id="hrefanim">Animation</a>
+            <a href="./src/animation.html" id="hrefanim">Animation</a>
           </p>
         </li>
         <li id="border3">
-          <p id="footer_p4"><a href="contact.html" id="hrefcont">Contact</a></p>
+          <p id="footer_p4"><a href="./src/contact.html" id="hrefcont">Contact</a></p>
         </li>
       </ul>
       <div id="watermark">
