--- a/src/illustration.html
+++ b/src/illustration.html
@@ -20,7 +20,7 @@
         <div id="head_menu">
           <ul id="headerlist">
             <li>
-              <p id="header_p1"><a href="Home.html" id="hrefHome">Home</a></p>
+              <p id="header_p1"><a href="\index.html" id="hrefHome">Home</a></p>
             </li>
             <li id="border1">
               <p id="header_p2">
@@ -263,7 +263,9 @@
       <div id="footer">
         <ul id="footerlist">
           <li>
-            <p id="footer_p1"><a href="Home.html" id="hrefHome">Home</a></p>
+            <p id="footer_p1">
+              <a href="\index.html" id="hrefHome">Home</a>
+            </p>
           </li>
           <li id="border1">
             <p id="footer_p2">
@@ -287,7 +289,7 @@
         <span class="closecursor" onclick="CloseModal()">&times;</span>
         <div class="modal-content">
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2023/YumiIllust.png" style="width: 30%;">
+            <img src="\portfolio/2023/YumiIllust.png" style="width: 35%;">
         </div>
         <div class="mySlides" style="display: block;">
             <img src="\portfolio/2023/NanamiMaiko.png" style="width: 40%;">
@@ -296,26 +298,26 @@
             <img src="\portfolio/2023/Animation_Nemu_Bday.gif" style="width: 40%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2023/ShinShua.png" style="width: 50%;">
+            <img src="\portfolio/2023/ShinShua.png" style="width: 60%;">
         </div>
 
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2022/Anguish.png" style="width: 60%;">
+            <img src="\portfolio/2022/Anguish.png" style="width: 80%;">
         </div>
         <div class="mySlides" style="display: block;">
             <img src="\portfolio/2022/Crepe.png" style="width: 30%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2022/Glow.png" style="width: 60%;">
+            <img src="\portfolio/2022/Glow.png" style="width: 70%;">
         </div>
         <div class="mySlides" style="display: block;">
             <img src="\portfolio/2022/KairosArrowmancer.jpg" style="width: 30%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2022/Kohana Yumi.png" style="width: 60%;">
+            <img src="\portfolio/2022/Kohana Yumi.png" style="width: 70%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2022/Rayda Revolt.png" style="width: 50%;">
+            <img src="\portfolio/2022/Rayda Revolt.png" style="width: 55%;">
         </div>
         <div class="mySlides" style="display: block;">
             <img src="\portfolio/2022/Reyda Revolt 100 Followers.jpg" style="width: 40%;">
@@ -324,7 +326,7 @@
             <img src="\portfolio/2022/SIU Render.png" style="width: 30%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2022/Ulrich von Hutten.png" style="width: 25%;">
+            <img src="\portfolio/2022/Ulrich von Hutten.png" style="width: 27%;">
         </div>
 
         <div class="mySlides" style="display: block;">
@@ -334,16 +336,16 @@
             <img src="\portfolio/2021/Floa Christmas 2021.png" style="width: 23%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2021/Haruse Supi New Outfit.png" style="width: 27%;">
+            <img src="\portfolio/2021/Haruse Supi New Outfit.png" style="width: 28%;">
         </div>
         <div class="mySlides" style="display: block;">
             <img src="\portfolio/2021/Kaoru Tobiume.png" style="width: 30%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2021/Mashiro Nemu ASMR 2.png" style="width: 50%;">
+            <img src="\portfolio/2021/Mashiro Nemu ASMR 2.png" style="width: 55%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2021/Mashiro Nemu Bday 1.png" style="width: 30%;">
+            <img src="\portfolio/2021/Mashiro Nemu Bday 1.png" style="width: 33%;">
         </div>
         <div class="mySlides" style="display: block;">
             <img src="\portfolio/2021/Nekoma Remu gif.gif" style="width: 40%;">
@@ -352,10 +354,10 @@
             <img src="\portfolio/2021/Rika Ironeko.png" style="width: 40%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2021/Tsubaki Samura.png" style="width: 30%;">
+            <img src="\portfolio/2021/Tsubaki Samura.png" style="width: 32%;">
         </div>
         <div class="mySlides" style="display: block;">
-            <img src="\portfolio/2021/ShironoTen with wings.png" style="width: 50%;">
+            <img src="\portfolio/2021/ShironoTen with wings.png" style="width: 52%;">
         </div>
     
   </body>
