--- a/src/contact.html
+++ b/src/contact.html
@@ -20,7 +20,7 @@
           <div id="head_menu">
             <ul id="headerlist">
               <li>
-                <p id="header_p1"><a href="Home.html" id="hrefHome">Home</a></p>
+                <p id="header_p1"><a href="\index.html" id="hrefHome">Home</a></p>
               </li>
               <li id="border1">
                 <p id="header_p2">
@@ -77,7 +77,46 @@
       </div>
       <div id="contentContainer">
         <div id="content">
+            <p>Contact me for Inquiries (In Development)</p>
+            <div id="container">
+                <form action="action">
+                  <label for="fname"><p class="formFormat">Address</p></label>
+                  <input type="text" id="fname" name="email" placeholder="Email Address">
 
+                  <label for="lname"><p class="formFormat">Title</p></label>
+                  <input type="text" id="lname" name="title" placeholder="Title">
+                  
+                  <label for="subject"><p class="formFormat">Subject</p></label>
+                  <textarea id="subject" name="subject" placeholder="Write Something"></textarea>
+                  <br><br>
+                  <input type="submit" value="submit">
+                </form>
+            </div>
+        </div>
+      </div>
+      <div id="footer">
+        <ul id="footerlist">
+          <li>
+            <p id="footer_p1">
+              <a href="\index.html" id="hrefHome">Home</a>
+            </p>
+          </li>
+          <li id="border1">
+            <p id="footer_p2">
+              <a href="illustration.html" id="hrefillust">Illustration</a>
+            </p>
+          </li>
+          <li id="border2">
+            <p id="footer_p3">
+              <a href="animation.html" id="hrefanim">Animation</a>
+            </p>
+          </li>
+          <li id="border3">
+            <p id="footer_p4"><a href="contact.html" id="hrefcont">Contact</a></p>
+          </li>
+        </ul>
+        <div id="watermark">
+          <p id="watermarkP">©2023 Philippines Heh Nice</p>
         </div>
       </div>
 </body>
